<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">sdktest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_registration">Registration</string>
    <string name="action_sip_register">Sip register</string>
    <string name="action_sip_unregister">Sip unregister</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_start_dialer">StartDialer</string>
    <string name="action_dialer_exit">Exit dialer</string>
    <string name="openSignUp">Sign Up</string>
    <string name="openContact">Contact</string>
    <string name="openSetting">Setting</string>
    <!-- For sign up -->
    <string name="signupRegisterSMS">RegisterSMS</string>
    <string name="signupActivateSMS">ActivateSMS</string>
    <string name="signupChangePhoneNumberWithSMS">ChangePhoneNumberWithSMS</string>
    <string name="signupActivateChangedNumber">ActivateChangedNumber</string>
    <string name="signuploginWithoutPassword">LoginWithoutPassword</string>
    <string name="signupHintCountryCode">CountryCode</string>
    <string name="signupHintPhonenumber">PhoneNumber</string>
    <string name="signupHintVerifyCode">VerifyCode</string>
    <!-- For contact -->
    <string name="contactFetch">Fetch</string>
    <string name="contactFetch1">Fetch 1</string>
    <string name="contactFetch2">Fetch 2</string>
    <string name="contactAddContactListener">AddContactListener</string>
    <string name="contactCheckForChange">CheckForChange</string>
    <string name="contactContainsVippieNumber">ContainsVippieNumber</string>
    <string name="contactContainsVippieNumbersCacheds">ContainsVippieNumbersCacheds</string>
    <string name="contactGetContactPhoto">GetContactPhoto</string>
    <string name="contactGetNumberForVippie">GetNumberForVippie</string>
    <string name="contactGetVippieLoginForNumber">GetVippieLoginForNumber</string>
    <string name="contactGetVippiePhones">GetVippiePhones</string>
    <string name="contactHasVippieNumber">HasVippieNumber</string>
    <string name="contactIsVippieId">IsVippieId</string>
    <string name="contactIsVippieNumber">IsVippieNumber</string>
    <string name="contactPhoneForVippieNumber">PhoneForVippieNumber</string>
    <string name="contactPrepareNumber">PrepareNumber</string>
    <string name="contactRegisterListener">RegisterListener</string>
    <string name="contactRemoveContactListener">RemoveContactListener</string>
    <string name="contactRequestAddNew">RequestAddNew</string>
    <string name="contactRequestEdit">RequestEdit</string>
    <string name="contactRequestPick">RequestPick</string>
    <string name="contactRequestView">RequestView</string>
    <string name="contactUnregisterListener">UnregisterListener</string>
    <string name="contactVerifyNumber">VerifyNumber</string>
    
</resources>
