<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/et_countrycodestr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/signupHintCountryCode"
            android:inputType="text"
            android:text="84" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/et_phonestr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/signupHintPhonenumber"
            android:inputType="text"
            android:text="938592413" >
        </EditText>

        <EditText
            android:id="@+id/et_verifycode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/signupHintVerifyCode"
            android:inputType="text" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/registerSmsClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signupRegisterSMS" />

        <Button
            android:id="@+id/activateSMSClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signupActivateSMS" />

        <Button
            android:id="@+id/changePhoneNumberWithSMSClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signupChangePhoneNumberWithSMS" />

        <Button
            android:id="@+id/activateChangedNumberClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signupActivateChangedNumber" />

        <Button
            android:id="@+id/loginWithoutPasswordClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signuploginWithoutPassword" />       
    </LinearLayout>

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>